# ai-repository-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py  repositories.py  routes.py
backend/app/auth/: __init__.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/embeddings/: __init__.py
backend/app/evaluation/: __init__.py
backend/app/graph/: __init__.py
backend/app/llm/: __init__.py
backend/app/models/: __init__.py
backend/app/observability/: logging.py
backend/app/parsers/: __init__.py
backend/app/rag/: __init__.py
backend/app/schemas/: health.py  repositories.py
backend/app/security/: __init__.py
backend/app/services/: repository_scanner.py
backend/app/workers/: worker.py
backend/tests/: test_health.py  test_repository_scanner.py
docs/: milestone-1.md  milestone-2.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: RepositoryWorkspace.tsx  ServiceStatusGrid.tsx
frontend/src/hooks/: useHealth.ts  useRepositories.ts
frontend/src/services/: api.ts
frontend/src/types/: health.ts  repositories.ts
scripts/: check-local.ps1
